fix(popover): don't let popover overflow
Summary:
The popover class now will adjust itself until it fits within the window
frame. You don't see the intermediate state in the double render.

Test Plan: edgehill --test

Reviewers: bengotow

Reviewed By: bengotow

Differential Revision: https://phab.nylas.com/D1795

--- a/static/components/popover.less
+++ b/static/components/popover.less
@@ -8,7 +8,6 @@
 .popover {
   display: flex;
   flex-direction: column;
-  width: 250px;
   max-height:400px;
   background-color: @background-color;
   border-radius: @border-radius-base;
